--- a/playbooks/setup_letsencrypt_certificate.yaml
+++ b/playbooks/setup_letsencrypt_certificate.yaml
@@ -1,43 +1,29 @@
 ---
-- name: Configurar Let's Encrypt SSL para PrestaShop
-  hosts: frontend
-  become: true
+- name: Playbook para configurar HTTPS
+  hosts: loadbalancer
+  become: yes
+
   vars_files:
-    - vars/variables.yaml  # Cargar variables
+    - ../vars/variables.yaml
+
   tasks:
-    - name: Instalar Certbot
+
+    - name: Desinstalar instalaciones previas de Certbot
       apt:
         name: certbot
-        state: present
-        update_cache: yes
+        state: absent
 
-    - name: Instalar plugin de Apache para Certbot
-      apt:
-        name: python3-certbot-apache
-        state: present
-        update_cache: yes
-
-    - name: Obtener certificado SSL de Let's Encrypt
-      command: certbot --apache -d "{{ domain }}" --non-interactive --agree-tos --email "{{ email }}"
-      register: certbot_output
-      ignore_errors: yes
-
-    - name: Comprobar si Certbot ha generado un certificado
-      debug:
-        msg: "{{ certbot_output.stdout }}"
-      when: certbot_output.rc == 0
-
-    - name: Configurar renovación automática del certificado
-      cron:
-        name: "Renovar certificado Let's Encrypt"
-        minute: "0"
-        hour: "0"
-        job: "certbot renew --quiet && systemctl restart apache2"
+    - name: Instalar Certbot con snap
+      snap:
+        name: certbot
+        classic: yes
         state: present
 
-    - name: Reiniciar Apache después de renovar el certificado
-      systemd:
-        name: apache2
-        state: restarted
-        enabled: true
-      when: certbot_output.rc == 0
+    - name: Solicitar y configurar certificado SSL/TLS a Let's Encrypt con certbot
+      command:
+        certbot --nginx \
+        -m {{ email }} \
+        --agree-tos \
+        --no-eff-email \
+        --non-interactive \
+        -d {{ domain }}
