--- a/playbooks/setup_load_balancer.yaml
+++ b/playbooks/setup_load_balancer.yaml
@@ -1,21 +1,63 @@
 ---
-- name: Configurar Load Balancer
+- name: Configurar proxy inverso con Nginx
   hosts: loadbalancer
-  become: true
+  become: yes
+  vars_files:
+    - ../vars/variables.yaml
+
   tasks:
-    - name: Instalar HAProxy
+    - name: Actualizar el repositorio de paquetes
       apt:
-        name: haproxy
+        update_cache: yes
+
+    - name: Actualizar los paquetes instalados
+      apt:
+        upgrade: dist
+        autoremove: yes
+
+    - name: Instalar Nginx
+      apt:
+        name: nginx
         state: present
 
-    - name: Configurar HAProxy
-      copy:
-        src: haproxy.cfg
-        dest: /etc/haproxy/haproxy.cfg
-        mode: '0644'
+    - name: Eliminar el virtualhost por defecto de Nginx si existe
+      file:
+        path: /etc/nginx/sites-enabled/default
+        state: absent
 
-    - name: Reiniciar HAProxy
+    - name: Copiar configuración del balanceador de carga
+      copy:
+        src: ../templates/load-balancer.conf
+        dest: /etc/nginx/sites-available/load-balancer.conf
+        owner: root
+        group: root
+        mode: 0644
+
+    - name: Configurar direcciones IP en la configuración de Nginx
+      replace:
+        path: /etc/nginx/sites-available/load-balancer.conf
+        regexp: "{{ item.regex }}"
+        replace: "{{ item.value }}"
+      loop:
+        - { regex: 'IP_FRONTEND_1', value: '{{ frontend_master_ip | default("") }}' }
+        - { regex: 'IP_FRONTEND_2', value: '{{ frontend_ip | default("") }}' }
+        - { regex: 'LE_DOMAIN', value: '{{ domain | default("") }}' }
+      when: item.value != ""
+
+    - name: Habilitar el virtualhost del balanceador de carga si no existe
+      file:
+        src: /etc/nginx/sites-available/load-balancer.conf
+        dest: /etc/nginx/sites-enabled/load-balancer.conf
+        state: link
+        force: yes
+
+    - name: Verificar la configuración de Nginx
+      command: nginx -t
+      register: nginx_test
+      failed_when: nginx_test.rc != 0
+
+    - name: Reiniciar Nginx para aplicar los cambios
       systemd:
-        name: haproxy
+        name: nginx
         state: restarted
-        enabled: true
+        enabled: yes
