--- a/templates/load-balancer.conf
+++ b/templates/load-balancer.conf
@@ -1,27 +1,21 @@
-# Configuración de HAProxy para balanceo de carga de PrestaShop
+upstream frontend_servers {
+    server IP_FRONTEND_1;
+    server IP_FRONTEND_2;
+}
 
-global
-    log 127.0.0.1 local0
-    maxconn 200
+server {
+    listen 80;
+    server_name LE_DOMAIN;
 
-defaults
-    log     global
-    option  httplog
-    timeout connect 5000ms
-    timeout client  50000ms
-    timeout server  50000ms
+    location / {
+        proxy_pass http://frontend_servers;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-frontend http_front
-    bind *:80
-    acl url_prestashop path_beg -i /prestashop
-    use_backend prestashop_backend if url_prestashop
-    default_backend http_backend
-
-backend prestashop_backend
-    balance roundrobin
-    server frontend1 frontend1.example.com:80 check
-    server frontend2 frontend2.example.com:80 check
-
-backend http_backend
-    balance roundrobin
-    server backend backend.example.com:80 check
+        # Additional settings to improve performance
+        proxy_buffers 16 4k;
+        proxy_buffer_size 8k;
+    }
+}
