--- a/playbooks/install_lamp_backend.yaml
+++ b/playbooks/install_lamp_backend.yaml
@@ -3,24 +3,27 @@
   hosts: backend
   become: true
   vars_files:
-    - vars/variables.yaml  # Cargar variables
+    - ../vars/variables.yaml
   tasks:
+    - name: Añadir repositorio de PHP
+      apt_repository:
+        repo: ppa:ondrej/php
+        state: present
+        update_cache: yes
+
     - name: Actualizar paquetes
       apt:
         update_cache: yes
 
-    - name: Instalar Apache y PHP
+    - name: Instalar dependencias necesarias
       apt:
         name:
           - apache2
           - php7.4
           - libapache2-mod-php7.4
           - php7.4-mysql
-        state: present
-
-    - name: Instalar MariaDB
-      apt:
-        name: mariadb-server
+          - mariadb-server
+          - python3-pymysql
         state: present
 
     - name: Iniciar y habilitar servicios
@@ -32,18 +35,29 @@
         - apache2
         - mariadb
 
+    - name: Borrar base de datos PrestaShop si existe
+      mysql_db:
+        name: "{{ prestashop_db_name }}"
+        state: absent
+        login_user: root
+        login_password: "{{ mariadb_root_password }}"
+
     - name: Crear base de datos PrestaShop
       mysql_db:
-        name: "{{ prestashop_db_name }}"  # Usar la variable prestashop_db_name
+        name: "{{ prestashop_db_name }}"
         state: present
+        login_user: root
+        login_password: "{{ mariadb_root_password }}"
 
     - name: Crear usuario de base de datos
       mysql_user:
-        name: "{{ prestashop_db_user }}"  # Usar la variable prestashop_db_user
-        password: "{{ prestashop_db_password }}"  # Usar la variable prestashop_db_password
+        name: "{{ prestashop_db_user }}"
+        password: "{{ prestashop_db_password }}"
         priv: "{{ prestashop_db_name }}.*:ALL"
         host: '%'
         state: present
+        login_user: root
+        login_password: "{{ mariadb_root_password }}"
 
     - name: Permitir acceso remoto a MariaDB
       lineinfile:
