--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ IP_FRONTEND_1=172.31.25.5
 IP_FRONTEND_2=172.31.29.16
 FRONTEND_NETWORK=172.31.0.0/16
 NFS_SERVER_IP=172.31.26.191
+PHP_INI=/etc/php/7.4/apache2/php.ini
